# BigInteger_and_RationalNumber

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists.txt.in  Makefile  README.md
src/: big_integer.cpp  big_integer.h  leibniz_row.cpp  leibniz_row.h  main.cpp  main_big_integer.cpp  main_rational_number.cpp  rational_number.cpp  rational_number.h
test/: bi_tests.cpp  bi_tests.h  rn_tests.cpp  rn_tests.h  test.cpp
